# festrike

./: CMakeLists.txt  CMakeLists.txt.user.2752652  CMakeLists.txt.user.b30cebb.22  CMakeLists.txt.user.f22ad45  CMakeLists.txt.user.f22ad45.4.9-pre1  Definitions.h  Errors.h  cadence.cpp  cadence.h  cadence.ui  cadenceblock.cpp  cadenceblock.h  calibration.cpp  calibration.h  calibration.ui  chart.cpp  chart.h  concurrentbtle.cpp  concurrentbtle.h  configFileFede.cfg  configFileMattia.cfg  configFileNicole.cfg  configFilefede.cfg  encoder  globalvariables.cpp  globalvariables.h  header.h  input.cpp  input.h  input.ui  main.cpp  main_fes.cpp  main_fes.h  main_gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mythread.cpp  mythread.h  pid.cpp  (+31 more)
files/: AcquiredData-2022-03-02-10-49-53.csv  AcquiredData-2022-03-02-12-25-40.csv  AcquiredData-2022-03-03-01-59-17.csv  AcquiredData-2022-03-03-04-38-52.csv
